<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/main_welcome"
        android:padding="@dimen/default_padding"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/main_show_list_btn"
        android:layout_alignStart="@+id/main_show_list_btn" />
    <EditText
        android:id="@+id/waiter_table_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/waiter_table"
        android:inputType="number"

        android:layout_marginLeft="178dp"
        android:layout_marginStart="178dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/welcomeTxt"
        android:layout_toEndOf="@+id/welcomeTxt" />

    <Button
        android:id="@+id/main_show_list_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_show_list"
        android:onClick="show"
        android:text="@string/main_show_btn"
        android:layout_below="@+id/welcomeTxt"
        />

    <Button
        android:id="@+id/main_inventory_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_show_list"
        android:onClick="inventory"
        android:text="@string/waiter_inventory"
        android:layout_below="@+id/main_show_list_btn"
        />

    <Button
        android:id="@+id/main_add_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_add"
        android:onClick="player"
        android:text="@string/main_add_btn"
        android:layout_below="@+id/main_inventory_btn"
        />

    <Button
        android:id="@+id/main_logout_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_lock"
        android:onClick="logout"
        android:text="@string/main_logout_btn"
        android:layout_below="@+id/waiter_addition_btn"
        />
    <Button
        android:id="@+id/waiter_order_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_add"
        android:onClick="order"
        android:text="@string/waiter_order_btn"
        android:layout_below="@+id/main_add_btn"/>
    <Button
        android:id="@+id/waiter_addition_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_menu_save"
        android:onClick="addition"
        android:text="@string/waiter_addition_btn"
        android:layout_below="@+id/waiter_order_btn"/>
</RelativeLayout>