<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/main_welcome"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/default_padding"
        />

    <Button
        android:id="@+id/main_show_list_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_show_list"
        android:onClick="show"
        android:text="@string/main_show_btn"
        android:layout_below="@+id/welcomeTxt"
        />

    <Button
        android:id="@+id/main_search_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_search"
        android:onClick="search"
        android:text="@string/main_search_btn"
        android:layout_below="@+id/main_show_list_btn"
        />

    <Button
        android:id="@+id/main_add_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_add"
        android:onClick="player"
        android:text="@string/main_add_btn"
        android:layout_below="@+id/main_search_btn"
        />

    <Button
        android:id="@+id/main_logout_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_lock"
        android:onClick="logout"
        android:text="@string/main_logout_btn"
        android:layout_below="@+id/main_add_btn"
        />
</RelativeLayout>

