<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/default_padding"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher"
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/login_username"
        android:layout_below="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:imeActionLabel="@string/login_btn"
        android:imeActionId="6"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:layout_below="@+id/login_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableRight="@drawable/ic_go"
        android:onClick="login"
        android:text="@string/login_btn"
        android:layout_below="@+id/login_password"
        android:layout_alignParentRight="true"
        style="?android:attr/borderlessButtonStyle"/>
    <Button
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableRight="@drawable/ic_go"
        android:onClick="register"
        android:text="@string/login_register_btn"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentRight="true"
        style="?android:attr/borderlessButtonStyle"/>
</RelativeLayout>