<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:alignmentMode="alignBounds"
                android:padding="@dimen/default_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:id="@+id/show_details_title_ll"
        >

        <TextView
            android:text="@string/show_details_title_title"
            style="@style/show_details_title"
            />

        <TextView
            android:id="@+id/show_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_details_title_ll"
        android:id="@+id/show_details_artist_ll">

        <TextView
            android:text="@string/show_artist_title"
            style="@style/show_details_title"
            />

        <TextView
            android:id="@+id/show_details_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_details_artist_ll"
        android:id="@+id/show_details_filename_ll">

        <TextView
            android:text="@string/show_details_filename_title"
            style="@style/show_details_title"
            />

        <TextView
            android:id="@+id/show_details_filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_details_filename_ll"
        android:id="@+id/show_details_rating_ll">

        <TextView
            android:text="@string/show_details_rating_title"
            style="@style/show_details_title"
            />

        <RatingBar
            android:id="@+id/show_details_rating"
            android:numStars="5"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_details_play_btn"
        android:onClick="play"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_play"
        style="?android:attr/buttonBarButtonStyle"/>
</RelativeLayout>
